--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -47,22 +47,6 @@
             </li>
           <!-- Portfolio Item End -->
 
-          <!-- Portfolio Item -->
-            <li>
-              <article class="col-md-3 project" data-tags="interior,mainlevel">
-                <div class="project-item-isotope">
-                  <div class="project-image">
-                    <a href="{{ media }}img/gallery/mainLRpaddle.jpg" class="popup-link" title="Vaulted ceilings in the main level">
-                      <img src="{{ media }}img/gallery/mainLRpaddlesmall.jpg" alt="sdf">
-                    </a>
-                  </div>
-                  <div class="project-text">
-                    Looking up from the main living area in our first condo
-                  </div>
-                </div>
-              </article>
-            </li>
-          <!-- Portfolio Item End -->
 
           <!-- Portfolio Item -->
             <li>
@@ -168,6 +152,24 @@
             </article>
           </li>
         <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/lookup1.jpg" class="popup-link" title="Vaulted ceilings in the main level">
+                    <img src="{{ media }}img/gallery/lookup1small.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Looking up from the main living area in our first condo
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
 
         <!-- Portfolio Item -->
           <li>
