--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -102,7 +102,7 @@
         <div class="row after-footer">
             <div class="col-md-8">
                 <p>&copy;2020 BransonTablerockOasis - ALL RIGHTS RESERVED</p>
-                <p>Branson Tablerock Oasis is a wholly owned division of RT Las Palmas</p>
+                <p>Branson Tablerock Oasis is a division of RT Las Palmas</p>
             </div>
             <div class="col-md-4">
                 <p>
