--- a/templates/pages/thingstodo.html
+++ b/templates/pages/thingstodo.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://theshepherdofthehills.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://theshepherdofthehills.com/" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.indianpointmarina.com/rentboat.php" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.indianpointmarina.com/" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -70,11 +70,11 @@
     <div class="col-md-6">
         <div class="our-team">
             <div class="our-team-text">
-                <h4>Payne Stewart Golf Course</h4>
+                <h4>Branson Hills Golf Club</h4>
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.paynestewartgolfclub.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.bransonhillsgolfclub.com/" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="http://www.sight-sound.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.sight-sound.com/ticketing/shows/title?location=BRANSON_MO" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
